charts page finished, connected every other page with this new one

--- a/style/mediaqueries/eleicoes.css
+++ b/style/mediaqueries/eleicoes.css
@@ -1,11 +1,194 @@
 /** mobile */
 @media screen and (min-width: 320px) and (max-width: 767px) {
+    #electionsDiv {
+        margin-top: 20%;
+        margin-bottom: 7%;
+        margin-left: 10%;
+        width: 80%;
+    } .sections {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-bottom: 40px;
+    }
     
+    #electionsTitle {
+        display: inline;
+        border-bottom: #C0392B dashed 2px;
+
+        font-size: 20px;
+        margin-left: 40px;
+    } #electionsIntro {
+        margin-top: 20px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    
+    #yearsIntro {
+        margin-left: 40px;
+        margin-right: 40px;
+    } #yearsDiv {
+        margin-top: 40px;
+        margin-left: 40px;
+    } #yearsTxt {
+        margin-right: 10px;
+    } #sltYears {
+        height: 12px;
+        width: 50px;
+
+        font-size: 7px;
+
+        background-color: #FDEBD0;
+        color: #000;
+        border-color: #000;
+    } #chart {
+        margin-top: 40px;
+    }
+
+    #partidoIntro {
+        margin-left: 40px;
+        margin-right: 40px;
+    } #formPartido {
+        margin-top: 40px;
+        margin-left: 40px;   
+    } #sltPartidoDiv, #sltPartidoYearDiv2 {
+        margin-bottom: 20px;
+        display: flex;
+        flex-direction: column;
+    } #sltPartido, #sltPartidoYear {
+        height: 12px;
+        width: 125px;
+        font-size: 7px;
+
+        margin-top: 3px;
+
+        background-color: #FDEBD0;
+        color: #000;
+        border-color: #000;
+    } #btnAdd, #btnRemove {
+        height: 12px;
+        font-size: 7px;
+        background-color: #434343;
+        color: #FDEBD0;
+        border: none;
+        margin-right: 5px;
+        /* border: #C0392B 2px solid; */
+    } #sltPartidoYearDiv {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #almostThere {
+        display: none;
+        margin-top: 40px; 
+        margin-left: 40px;
+        margin-right: 40px;
+    } #cantComparePlaceholder {
+        width: 100%;
+    } #cantCompare {
+        display: none;
+        margin-top: 80px;
+        margin-left: 40px;
+        margin-right: 40px;
+        width: 50%;
+    } #cantCompareSorry {
+        margin-top: 40px;
+    }
+
+    #pie {
+        margin-top: 40px;
+    }    
 }   
 
 /** tablet vertical portrait */
 @media screen and (min-width: 768px) and (max-width: 1023px) {
+    #electionsDiv {
+        margin-top: 15%;
+        margin-bottom: 7%;
+        margin-left: 10%;
+        width: 80%;
+    } .sections {
+        padding-top: 40px;
+        padding-bottom: 40px;
+        margin-bottom: 40px;
+    }
     
+    #electionsTitle {
+        display: inline;
+        border-bottom: #C0392B dashed 2px;
+
+        margin-left: 40px;
+    } #electionsIntro {
+        margin-top: 20px;
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    
+    #yearsIntro {
+        margin-left: 40px;
+        margin-right: 40px;
+    } #yearsDiv {
+        margin-top: 40px;
+        margin-left: 40px;
+    } #yearsTxt {
+        margin-right: 10px;
+    } #sltYears {
+        height: 30px;
+        width: 100px;
+
+        background-color: #FDEBD0;
+        color: #000;
+        border-color: #000;
+    } #chart {
+        margin-top: 40px;
+    }
+
+    #partidoIntro {
+        margin-left: 40px;
+        margin-right: 40px;
+    } #formPartido {
+        margin-top: 40px;
+        margin-left: 40px;   
+    } #sltPartidoDiv {
+        margin-bottom: 20px;
+    } #sltPartido, #sltPartidoYear {
+        height: 30px;
+        margin-left: 10px;
+
+        background-color: #FDEBD0;
+        color: #000;
+        border-color: #000;
+    } #btnAdd, #btnRemove {
+        height: 30px;
+        background-color: #434343;
+        color: #FDEBD0;
+        border: none;
+        margin-right: 5px;
+        /* border: #C0392B 2px solid; */
+    } #sltPartidoYearDiv {
+        display: flex;
+        flex-direction: column;
+    }
+
+    #almostThere {
+        display: none;
+        margin-top: 40px; 
+        margin-left: 40px;
+        margin-right: 40px;
+    } #cantComparePlaceholder {
+        width: 100%;
+    } #cantCompare {
+        display: none;
+        margin-top: 80px;
+        margin-left: 40px;
+        margin-right: 40px;
+        width: 50%;
+    } #cantCompareSorry {
+        margin-top: 40px;
+    }
+
+    #pie {
+        margin-top: 40px;
+    }
 }   
 
 /** desktop screen */
@@ -41,8 +224,8 @@
     } #yearsTxt {
         margin-right: 10px;
     } #sltYears {
-        width: 5%;
         height: 30px;
+        width: 100px;
 
         background-color: #FDEBD0;
         color: #000;
@@ -133,7 +316,7 @@
     } #yearsTxt {
         margin-right: 10px;
     } #sltYears {
-        width: 5%;
+        width: 100px;
         height: 30px;
 
         background-color: #FDEBD0;
