--- a/style/mediaqueries/jogosEducativos.css
+++ b/style/mediaqueries/jogosEducativos.css
@@ -170,7 +170,7 @@
 @media screen and (min-width: 1024px) and (max-width: 1369px)  {
     body {
         background-image: url("../../images/website/images/grey_elements_bg.png");
-        background-size: auto;
+        background-size: contain;
         background-position: 0% 50%;
         background-repeat: repeat;
     }
