--- a/style/mediaqueries/eleicoes.css
+++ b/style/mediaqueries/eleicoes.css
@@ -100,6 +100,10 @@
     #pie {
         margin-top: 40px;
     }    
+
+    #extra {
+        margin-top: 40px;
+    }
 }   
 
 /** tablet vertical portrait */
@@ -195,6 +199,10 @@
     }
 
     #pie {
+        margin-top: 40px;
+    }
+
+    #extra {
         margin-top: 40px;
     }
 }   
@@ -293,6 +301,10 @@
     #pie {
         margin-top: 40px;
     }
+
+    #extra {
+        margin-top: 30px;
+    }
 }
 
 /** bigger desktop screen */
@@ -388,6 +400,10 @@
 
     #pie {
         margin-top: 40px;
+    }
+
+    #extra {
+        margin-top: 20px;
     }
 }
 
