--- a/style/mediaqueries/jogo.css
+++ b/style/mediaqueries/jogo.css
@@ -71,3 +71,10 @@
         padding: 30px;
     }
 }
+
+body {
+    background-image: url("../../images/website/images/grey_elements_bg.png");
+    background-size: contain;
+    background-position: 0% 50%;
+    background-repeat: repeat;
+}
