--- a/style/mediaqueries/jogo.css
+++ b/style/mediaqueries/jogo.css
@@ -70,6 +70,32 @@
         margin-top: 10px;
         padding: 30px;
     }
+
+    #sltControls {
+        background-color: transparent;
+        border-color: #FDEBD0;
+        outline: none;
+    } option {
+        text-align: center;
+        background-color: #FDEBD0;
+        border-style: solid;
+        border-width: 2px;
+        border-color: #434343;
+    }
+
+    .hr {
+        width: 30%;
+        border-bottom: solid #434343;
+        border-width: 2px;
+    } #controlsTitle {
+        margin-top: 10px;
+        margin-bottom: 30px;
+    }
+
+    #handText {
+        margin-top: 10px;
+        margin-bottom: 25px;
+    }
 }
 
 body {
